fixed tipos thx to epiksalad

--- a/Additional Resources/Fields and Vector Spaces.tex
+++ b/Additional Resources/Fields and Vector Spaces.tex
@@ -50,12 +50,12 @@ Now, we say that $(\mathbb{F}, +, \cdot)$ is a \emph{field} if the following axi
 \begin{enumerate}[label = (A\arabic*)] 
 	\item $a + b = b + a$ for all $a, b \in \mathbb{F}.$
 	\item $a + (b + c) = (a + b) + c$ for all $a, b \in \mathbb{F}.$
-	\item $\exists 0 \in \mathbb{F}$ such that $a + 0 = a = 0 + a$ for all $a, b \in \mathbb{F}.$
+	\item $\exists 0 \in \mathbb{F}$ such that $a + 0 = a = 0 + a$ for all $a \in \mathbb{F}.$
 	\item For every $a \in \mathbb{F}$, there exists $b \in \mathbb{F}$ such that $a + b = 0 = b + a.$
 	%
 	\item $a \cdot b = b \cdot a$ for all $a, b \in \mathbb{F}.$
 	\item $a \cdot (b \cdot c) = (a \cdot b) \cdot c$ for all $a, b, c \in \mathbb{F}.$
-	\item $\exists 1 \in \mathbb{F}$ such that $a \cdot 1 = a = 1 \cdot a$ for all $a, b \in \mathbb{F}.$
+	\item $\exists 1 \in \mathbb{F}$ such that $a \cdot 1 = a = 1 \cdot a$ for all $a\in \mathbb{F}.$
 	\item For every $a \in \mathbb{F}\setminus\{0\}$, there exists $b \in \mathbb{F}$ such that $a \cdot b = 1 = b \cdot a.$
 	%
 	\item $a\cdot(b + c) = a\cdot b + a\cdot c$ and $(b + c)\cdot a = b\cdot a + c \cdot a$ for all $a, b, c \in \mathbb{F}.$
@@ -63,7 +63,7 @@ Now, we say that $(\mathbb{F}, +, \cdot)$ is a \emph{field} if the following axi
 	\item $1 \neq 0.$
 
 \end{enumerate}
-\textbf{Notation abuse:} If it clear from context, one often writes $\mathbb{F}$ is a field instead of $(\mathbb{F}, +, \cdot).$
+\textbf{Notation abuse:} If it is clear from context, one often writes $\mathbb{F}$ is a field instead of $(\mathbb{F}, +, \cdot).$
 \subsection{Remarks}
 I have given the definition of a \emph{commutative} field. Some books don't require commutativity of multiplication (A5) to be a part of the axioms.  However, we shall not go with that definition. \\~\\
 As you may have observed, some of the statements contain redundant information. For example, I could've simply written $a + 0 = a$ instead of $a + 0 = a = 0 + a,$ for the last part would've followed from (A1). You are right in believing so. Perhaps someday you will realise why I had specifically written it in this case (even though it would've been perfectly correct without).\\
