fixed tipos thx to epiksalad

--- a/Additional Resources/Fields and Vector Spaces.tex
+++ b/Additional Resources/Fields and Vector Spaces.tex
@@ -75,7 +75,7 @@ The last axiom, as silly as it may seem, is there simply to avoid the pathologic
 Lastly, note that I did \emph{not} demand that the identities or inverses must be unique, to begin with. That is, just from (A3) alone, I cannot conclude that if $a + 0 = a = 0' + a$ for every $a \in \mathbb{F},$ then $0 = 0'.$ However, in the case of $\mathbb{R},$ we do know that that is true.\\
 In fact, nicely enough, it \emph{is} true in general and can be proven using just (A2) and (A3). (Check!)\\
 Similarly, it can shown that the $b$ described in (A4) is indeed unique using just (A2) - (A4). (Check!)\\
-Analogous results also hold (A7) and (A8).\\~\\
+Analogous results also hold for (A7) and (A8).\\~\\
 Thus, keeping in mind the above results, we introduce the following notations:\\
 For any $a \in \mathbb{F},$ $-a$ denotes \emph{the} additive inverse of $a$, that is, the unique element such that $a + (-a) = 0.$\\
 For any $a \in \mathbb{F}\setminus\{0\},$ $a^{-1}$ denotes \emph{the} multiplicative inverse of $a$, that is, the unique element such that $a \cdot a^{-1} = 1.$
