fixed tipos thx to amitrajaraman

--- a/Additional Resources/Fields and Vector Spaces.tex
+++ b/Additional Resources/Fields and Vector Spaces.tex
@@ -185,5 +185,6 @@ How would you generalise this? (Note that in this case, we didn't just use the f
 	\item Let $V$ be a vector space over $\mathbb{F}.$ \\
 	Let $\alpha \in \mathbb{F}\setminus\{0\}$ and $v \in V.$\\
 	Show that if $\alpha\cdot v = \mathbf{0},$ then $v = \mathbf{0}.$
+	\item Determine a subset of $\mathbb{R}^2$ which is not a vector space under the usual addition and scalar multiplication.
 \end{enumerate}
 \end{document}
