--- a/Hints/tut-3-extra.tex
+++ b/Hints/tut-3-extra.tex
@@ -72,8 +72,8 @@ These are \textbf{not} complete solutions and should not be regarded as such. Th
 	Thus, we have proven the claim. It now follows that $\nullity AB = \nullity B.$ Use rank-nullity to conclude.\\~\\
 	Claim 2. $\mathcal{C}(BA) = \mathcal{C}(B).$ \\
 	Proof. It is clear that $\mathcal{C}(B) \supset \mathcal{C}(BA)$ as $(BA)v = B(Av).$ (This is true even without the hypothesis about the invertibility of $A.$)\\
-	Now we show that $\mathcal{C}(BA) \supset \mathcal{N}(B).$\\
-	Note that $Bv = BA(A^{-1}v.$ Use this to conclude.
+	Now we show that $\mathcal{C}(BA) \supset \mathcal{C}(B).$\\
+	Note that $Bv = BA(A^{-1}v).$ Use this to conclude.
 	%
 	\item 
 	\begin{enumerate}[label = (\roman*)] 
