--- a/Hints/Week-5.tex
+++ b/Hints/Week-5.tex
@@ -93,7 +93,7 @@ These are \textbf{not} complete solutions and should not be regarded as such. Th
 	At this point, we note that $\lambda$ cannot be zero, since $f$ is not identically zero.\\
 	Thus, $f'(x) = \frac{1}{\lambda}f(x).$\\
 	We may now multiply with $e^{-x/\lambda}$ to write:\\
-	$e^{x/\lambda}f'(x) - e^{-x/\lambda}\frac{1}{\lambda}f(x) = 0$ or $(e^{-x/\lambda}f(x))' = 0.$\\
+	$e^{-x/\lambda}f'(x) - e^{-x/\lambda}\frac{1}{\lambda}f(x) = 0$ or $(e^{-x/\lambda}f(x))' = 0.$\\
 	Thus, $e^{-x/\lambda}f(x) = c$ for some $c \in \mathbb{R}.$ (In fact, $c = f(0)$.)\\
 	However, now one may check that $f(x) = ce^{-x/\lambda}$ does \emph{not} actually satisfy $T(f) = \lambda f.$\\~\\
 	Second part. Let $\lambda \in \mathbb{R}.$ We show that there exists some nonzero $f$ such that $T(f) = \lambda f.$\\
