--- a/QP.tex
+++ b/QP.tex
@@ -305,6 +305,8 @@ If nothing is mentioned, assume that similarity and eigenvalues/eigenvectors are
 	 %
 	 \item Suppose $A \in \mathbb{R}^{3 \times 3}$ satisfies $A^{3} - 2A^{2} = A - 2I$ and has the property that $\det(A) < 0$ and $\trace(A) > 2$. \newline
 	 Find the characteristic polynomial $p(t) = \det(A - tI)$.
+
+	 {\color{gray} It is \textbf{not} $-(t^{3} - 2t^{2} - t + 2)$.}
 \end{enumerate}
 
 \end{document}
