--- a/QP.tex
+++ b/QP.tex
@@ -295,7 +295,7 @@ If nothing is mentioned, assume that similarity and eigenvalues/eigenvectors are
 	 		z
 	 	\end{bmatrix} = 36.
 	 \end{equation*}
-	 Find a matrix $U$ such that $U^{\mathsf{T}}AU$ is diagonal.
+	 Find an orthogonal matrix $O$ such that $O^{\mathsf{T}}AO$ is diagonal.
 	 %
 	 \item Let $A$ be an $n \times n$ normal matrix and $\lambda \in \mathbb{C}$. \newline
 	 Show that $A - \lambda I$ is a normal matrix. \newline
