--- a/QP.tex
+++ b/QP.tex
@@ -101,7 +101,7 @@ If nothing is mentioned, assume that similarity and eigenvalues/eigenvectors are
 	 %
 	 \item Let $A$ be a solved Sudoku interpreted as a $9 \times 9$ real matrix. Let $p(t)$ be the characteristic polynomial of $A$. Show that $p(45) = 0$.
 	 %
-	 \item Let $A$ be an $n \times n$ polynomial with characteristic polynomial $(-1)^{n}(t - 1)(t - 2) \cdots (t - n)$. Show that
+	 \item Let $A$ be an $n \times n$ matrix with characteristic polynomial $(-1)^{n}(t - 1)(t - 2) \cdots (t - n)$. Show that
 	 \begin{equation*} 
 	 	A \mathbf{x} = 
 	 	\begin{bmatrix}
